--- a/app/src/main/res/drawable/progressbar.xml
+++ b/app/src/main/res/drawable/progressbar.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <rotate xmlns:android="http://schemas.android.com/apk/res/android"
+    android:duration="2000"
     android:fromDegrees="-90"
     android:pivotX="50%"
     android:pivotY="50%"
-    android:toDegrees="270" >
+    android:toDegrees="1080" >
     <shape
         android:shape="ring"
         android:useLevel="false"
@@ -12,7 +13,7 @@
             android:centerY="0.5"
             android:endColor="#FA5858"
             android:startColor="#0099CC"
-
+            android:type="sweep"
             android:useLevel="false" />
     </shape>
 
