--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -1,115 +1,160 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
     android:fillViewport="true"
     android:background="@color/colorBlack">
-    <LinearLayout
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        >
+        android:visibility="visible">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#fff"
-        android:textSize="18sp"
-        android:text="Add Service Image"/>
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Add Service Image*"
+            android:textColor="#fff"
+            android:textSize="18sp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-
-        <LinearLayout
-            android:layout_width="match_parent"
+        <ImageView
+            android:id="@+id/feature_img"
+            android:layout_width="0dp"
             android:layout_height="200dp"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/white_roundshape"
-            android:gravity="center">
+            android:layout_marginTop="8dp"
+            android:background="@color/colorWhite"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView8" />
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                app:srcCompat="@drawable/ic_add_a_photo_" />
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintBottom_toBottomOf="@+id/feature_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/feature_img"
+            app:layout_constraintTop_toTopOf="@+id/feature_img"
+            app:srcCompat="@drawable/ic_add_a_photo_" />
 
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:visibility="gone" />
-        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/gallryIamgesRecycler"
+            android:layout_width="0dp"
+            android:layout_height="125dp"
+            android:layout_marginTop="8dp"
+            android:background="#fff"
+            android:padding="2dp"
+            android:scaleType="centerCrop"
+            android:visibility="gone"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/feature_img" />
 
         <EditText
-        android:layout_marginTop="16dp"
-        android:id="@+id/edt_service_title"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:paddingLeft="10dp"
-        android:textSize="18sp"
-        android:textColor="#F4F4F4"
-        android:textColorHint="#EAD5D5"
-        android:background="@drawable/edt_shape"
-        android:hint="Service Title"/>
+            android:id="@+id/edt_service_title"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edt_shape"
+            android:hint="Service Title"
+            android:paddingLeft="10dp"
+            android:textColor="#F4F4F4"
+            android:textColorHint="#EAD5D5"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/gallryIamgesRecycler" />
 
-    <EditText
-        android:layout_marginTop="16dp"
-        android:id="@+id/edt_service_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:minHeight="100dp"
-        android:padding="10dp"
-        android:textColor="#fff"
-        android:textSize="18sp"
-        android:gravity="top"
-        android:textColorHint="#EAD5D5"
-        android:background="@drawable/edt_shape"
-        android:hint="Description"/>
+        <EditText
+            android:id="@+id/edt_service_description"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/edt_shape"
+            android:gravity="top"
+            android:hint="Description"
+            android:minHeight="100dp"
+            android:padding="10dp"
+            android:textColor="#fff"
+            android:textColorHint="#EAD5D5"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_service_rate" />
 
-    <Spinner
-        android:id="@+id/ratetype"
-        android:layout_marginTop="16dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_marginBottom="7dp"
-        android:entries="@array/rate_type"
-        android:theme="@style/Spinner"
-        style="@android:style/Widget.Holo.Light.Spinner"
-        android:drawSelectorOnTop="true"/>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/layout"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:background="#666666"
+            app:cardCornerRadius="10dp"
+            app:layout_constraintBottom_toBottomOf="@+id/edt_service_rate"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toEndOf="@+id/edt_service_rate"
+            app:layout_constraintTop_toTopOf="@+id/edt_service_rate"
+            app:layout_constraintVertical_bias="0.0">
+
+            <Spinner
+                android:id="@+id/ratetype"
+                android:layout_width="match_parent"
+                android:layout_height="40dp" />
+        </androidx.cardview.widget.CardView>
 
 
-    <EditText
-        android:layout_marginTop="10dp"
-        android:id="@+id/edt_service_rate"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:paddingLeft="10dp"
-        android:textSize="18sp"
-        android:textColor="#F4F4F4"
-        android:textColorHint="#EAD5D5"
-        android:background="@drawable/edt_shape"
-        android:hint="Service Rate"/>
+        <EditText
+            android:id="@+id/edt_service_rate"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="4dp"
+            android:background="@drawable/edt_shape"
+            android:hint="Service Rate"
+            android:inputType="number"
+            android:paddingLeft="10dp"
+            android:textColor="#F4F4F4"
+            android:textColorHint="#EAD5D5"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toStartOf="@+id/layout"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_service_title" />
 
         <Button
-            android:layout_marginTop="16dp"
             android:id="@+id/btn_add_event_images"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="50dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/blueround_stroke"
             android:text="Add Event Images"
             android:textColor="#fff"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/edt_service_description" />
+
+        <Button
+            android:id="@+id/btn_publish"
+            android:layout_width="200dp"
+            android:layout_height="50dp"
             android:layout_gravity="center_horizontal"
-            android:background="@drawable/blueround_stroke"/>
-    <Button
-        android:layout_marginTop="16dp"
-        android:id="@+id/btn_publish"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
-        android:text="Publish"
-        android:textColor="#fff"
-        android:layout_gravity="center_horizontal"
-        android:background="@drawable/fullroundshape"
-        />
+            android:layout_marginTop="16dp"
+            android:background="@drawable/fullroundshape"
+            android:text="Publish"
+            android:textColor="#fff"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/btn_add_event_images" />
 
 
-
-    </LinearLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </ScrollView>
