--- a/app/src/main/res/layout/activity_booking_requests.xml
+++ b/app/src/main/res/layout/activity_booking_requests.xml
@@ -16,6 +16,7 @@
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
         android:textSize="16sp"
+        android:visibility="gone"
         android:textColor="#fff"
         android:background="@color/colorBlue"
          />
