--- a/app/src/main/res/layout/activity_chat_viewer.xml
+++ b/app/src/main/res/layout/activity_chat_viewer.xml
@@ -30,7 +30,8 @@
             android:layout_width="40dp"
             android:layout_height="match_parent"
             app:civ_border_width="1dp"
-            app:srcCompat="@drawable/ic_doctor"/>
+            app:civ_border_color="@color/colorWhite"
+            app:srcCompat="@drawable/ic_avatar"/>
 
         <TextView
             android:id="@+id/toolbar_title"
