--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,7 +29,9 @@
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
                 android:layout_marginRight="10dp"
-                app:srcCompat="@drawable/ic_doctor"/>
+                app:civ_border_width="1dp"
+                app:civ_border_color="@color/colorWhite"
+                app:srcCompat="@drawable/ic_avatar"/>
         </androidx.appcompat.widget.Toolbar>
 
 
