--- a/app/src/main/res/layout/booking_cost_dialogue.xml
+++ b/app/src/main/res/layout/booking_cost_dialogue.xml
@@ -23,7 +23,9 @@
         android:id="@+id/img_dj_profile"
         android:layout_width="70dp"
         android:layout_height="70dp"
-        android:src="@drawable/woman"/>
+        app:civ_border_color="@color/colorBlack"
+        app:civ_border_width="2dp"
+        android:src="@drawable/ic_avatar"/>
         <TextView
             android:layout_marginTop="4dp"
             android:id="@+id/txt_dj_name"
