--- a/app/src/main/res/layout/booking_item_layout.xml
+++ b/app/src/main/res/layout/booking_item_layout.xml
@@ -22,7 +22,8 @@
             android:layout_marginTop="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/woman" />
+            app:civ_border_width="2dp"
+            app:srcCompat="@drawable/ic_avatar" />
 
         <TextView
             android:id="@+id/txt_booker_name"
