--- a/app/src/main/res/layout/chat_item_layout.xml
+++ b/app/src/main/res/layout/chat_item_layout.xml
@@ -16,7 +16,8 @@
             android:id="@+id/img_msg_sender"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:srcCompat="@drawable/ic_doctor" />
+            app:civ_border_width="2dp"
+            app:srcCompat="@drawable/ic_avatar" />
 
         <TextView
             android:id="@+id/txt_User_name"
