--- a/app/src/main/res/layout/fragment_bookings.xml
+++ b/app/src/main/res/layout/fragment_bookings.xml
@@ -46,12 +46,13 @@
         android:paddingLeft="10dp"
         android:layout_marginTop="8dp"
         android:background="#fff">
+
         <ImageView
             android:id="@+id/img_done"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_centerVertical="true"
-            app:srcCompat="@drawable/ic_check_circle"/>
+            app:srcCompat="@drawable/ic_check_blue" />
 
 
         <TextView
