--- a/app/src/main/res/layout/item_cancel_accept_request.xml
+++ b/app/src/main/res/layout/item_cancel_accept_request.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="10dp"
+    android:layout_marginTop="5dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="14dp">
 
@@ -14,114 +14,237 @@
         android:padding="10dp">
 
 
-        <androidx.cardview.widget.CardView
-            android:id="@+id/card_img"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            app:cardCornerRadius="10dp"
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/img_requester"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:scaleType="centerCrop"
+            app:civ_border_color="@color/colorBlack"
+            app:civ_border_width="2dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_avatar" />
 
-            <ImageView
-                android:id="@+id/img_requester"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                app:srcCompat="@drawable/woman"
-                android:scaleType="centerCrop"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="61dp" />
-        </androidx.cardview.widget.CardView>
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_margin="4dp"
+            android:layout_gravity="center"
+            android:indeterminateDrawable="@drawable/progressbar"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/img_requester"
+            app:layout_constraintEnd_toEndOf="@+id/img_requester"
+            app:layout_constraintStart_toStartOf="@+id/img_requester"
+            app:layout_constraintTop_toTopOf="@+id/img_requester" />
+
 
         <TextView
             android:id="@+id/txt_requester_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="14dp"
-            android:layout_marginLeft="14dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat"
             android:text="Esther Berry"
             android:textColor="@color/colorBlack"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/card_img"
-            app:layout_constraintStart_toEndOf="@+id/card_img"
-            app:layout_constraintTop_toTopOf="@+id/card_img"
-            app:layout_constraintVertical_bias="0.25" />
-
-        <TextView
-            android:id="@+id/txt_sirvice_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:background="@drawable/roundshape"
-            android:paddingLeft="6dp"
-            android:paddingTop="3dp"
-            android:paddingRight="6dp"
-            android:paddingBottom="3dp"
-            android:text="Service Name"
-            android:textColor="#fff"
             android:textSize="14sp"
-            app:layout_constraintStart_toStartOf="@+id/txt_requester_name"
-            app:layout_constraintTop_toBottomOf="@+id/txt_requester_name" />
-
-        <TextView
-            android:id="@+id/txt_discount"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginLeft="8dp"
-            android:background="@drawable/roundshape"
-            android:paddingLeft="6dp"
-            android:paddingTop="3dp"
-            android:paddingRight="6dp"
-            android:paddingBottom="3dp"
-            android:text="Discount"
-            android:textColor="#fff"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_sirvice_name"
-            app:layout_constraintStart_toEndOf="@+id/txt_sirvice_name"
-            app:layout_constraintTop_toTopOf="@+id/txt_sirvice_name" />
+            app:layout_constraintStart_toEndOf="@+id/img_requester"
+            app:layout_constraintTop_toTopOf="@+id/img_requester" />
 
         <TextView
             android:id="@+id/txt_sirvice_charges"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/montserrat"
             android:text="$25.00"
-            android:textColor="@color/colorBlack"
-            android:textSize="16sp"
+            android:textColor="@color/colorBlue"
+            android:textSize="14sp"
             android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/card_img"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/card_img"
-            app:layout_constraintVertical_bias="0.39" />
+            app:layout_constraintStart_toStartOf="@+id/txt_requester_name"
+            app:layout_constraintTop_toBottomOf="@+id/txt_requester_name" />
+
+        <TextView
+            android:id="@+id/textView19"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Booking Date and Time"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/serviceType"
+            app:layout_constraintTop_toBottomOf="@+id/serviceType" />
+
+        <TextView
+            android:id="@+id/txt_start_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:fontFamily="@font/montserrat"
+            android:text="01-09-2020"
+            android:textColor="@color/colorBlack"
+            android:textSize="14sp"
+            app:layout_constraintStart_toStartOf="@+id/textView19"
+            app:layout_constraintTop_toBottomOf="@+id/textView19" />
+
+        <View
+            android:id="@+id/divider3"
+            android:layout_width="409dp"
+            android:layout_height="1dp"
+            android:background="#ACABAB"
+            app:layout_constraintTop_toBottomOf="@+id/txt_start_date"
+            tools:layout_editor_absoluteX="1dp" />
 
         <TextView
             android:id="@+id/textView21"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat"
             android:text="Location"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/card_img"
-            app:layout_constraintTop_toBottomOf="@+id/card_img" />
+            app:layout_constraintStart_toStartOf="@+id/phoneNo"
+            app:layout_constraintTop_toBottomOf="@+id/phoneNo" />
 
         <TextView
             android:id="@+id/txt_address"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
             android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat"
             android:text="105 william St, Chicago, US"
             android:textColor="@color/colorBlack"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
 
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="To"
+            android:textColor="@color/colorBlue"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/txt_start_date"
+            app:layout_constraintStart_toEndOf="@+id/txt_start_date"
+            app:layout_constraintTop_toTopOf="@+id/txt_start_date" />
+
+        <TextView
+            android:id="@+id/txt_end_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="02-9-2020"
+            android:textColor="@color/colorBlack"
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="@+id/textView14"
+            app:layout_constraintStart_toEndOf="@+id/textView14"
+            app:layout_constraintTop_toTopOf="@+id/textView14" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Email"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/divider3"
+            app:layout_constraintTop_toBottomOf="@+id/txt_start_date" />
+
+        <TextView
+            android:id="@+id/email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:fontFamily="@font/montserrat"
+            android:text="TextView"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/textView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:fontFamily="@font/montserrat"
+            android:text="Phone No"
+            android:textSize="12sp"
+            app:layout_constraintStart_toStartOf="@+id/email"
+            app:layout_constraintTop_toBottomOf="@+id/email" />
+
+        <TextView
+            android:id="@+id/phoneNo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:text="no Text"
+            android:textColor="@color/colorBlack"
+            android:textSize="16sp"
+            app:layout_constraintStart_toStartOf="@+id/textView7"
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+
+        <TextView
+            android:id="@+id/textView6"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:text="Service Name"
+            app:layout_constraintStart_toStartOf="@+id/card_img"
+            app:layout_constraintTop_toBottomOf="@+id/img_requester" />
+
+        <TextView
+            android:id="@+id/serviceName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:text="TextView"
+            android:textColor="@color/colorBlack"
+            app:layout_constraintStart_toStartOf="@+id/textView6"
+            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+        <TextView
+            android:id="@+id/textView9"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="Service Type"
+            app:layout_constraintStart_toStartOf="@+id/serviceName"
+            app:layout_constraintTop_toBottomOf="@+id/serviceName" />
+
+        <TextView
+            android:id="@+id/serviceType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp"
+            android:text="TextView"
+            android:textColor="@color/colorBlack"
+            app:layout_constraintStart_toStartOf="@+id/textView9"
+            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+
         <ImageView
-            android:id="@+id/img_cancle_accept"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:scaleType="centerCrop"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:id="@+id/cancel_sign"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_cancel_red" />
+
+        <ImageView
+            android:id="@+id/img_accept"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_check" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
