--- a/app/src/main/res/layout/item_chat_left.xml
+++ b/app/src/main/res/layout/item_chat_left.xml
@@ -8,7 +8,9 @@
         android:id="@+id/profile_image"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        app:srcCompat="@drawable/ic_doctor"
+        app:civ_border_width="2dp"
+        app:civ_border_color="@color/colorWhite"
+        app:srcCompat="@drawable/ic_avatar"
         />
 
     <RelativeLayout
