--- a/app/src/main/res/layout/item_chat_list_layout.xml
+++ b/app/src/main/res/layout/item_chat_list_layout.xml
@@ -18,8 +18,9 @@
             android:id="@+id/img_msg_sender"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:civ_border_width="1dp"
-            app:srcCompat="@drawable/ic_doctor" />
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/colorWhite"
+            app:srcCompat="@drawable/ic_avatar" />
 
         <TextView
             android:id="@+id/txt_msg_sender_name"
