--- a/app/src/main/res/layout/item_chat_right.xml
+++ b/app/src/main/res/layout/item_chat_right.xml
@@ -16,7 +16,9 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_alignParentRight="true"
-        app:srcCompat="@drawable/ic_doctor"
+        app:civ_border_color="@color/colorWhite"
+        app:civ_border_width="2dp"
+        app:srcCompat="@drawable/ic_avatar"
         />
 
         <RelativeLayout
