--- a/app/src/main/res/layout/item_comment_layout.xml
+++ b/app/src/main/res/layout/item_comment_layout.xml
@@ -16,7 +16,8 @@
         android:layout_height="70dp"
         app:layout_constraintStart_toStartOf="@+id/guideline7"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_doctor" />
+        app:civ_border_width="2dp"
+        app:srcCompat="@drawable/ic_avatar" />
 
     <TextView
         android:id="@+id/txt_user_name"
