--- a/app/src/main/res/layout/item_notification_layout.xml
+++ b/app/src/main/res/layout/item_notification_layout.xml
@@ -16,7 +16,9 @@
             android:id="@+id/img_profile"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            app:srcCompat="@drawable/ic_doctor"
+            app:civ_border_color="@color/colorWhite"
+            app:civ_border_width="2dp"
+            app:srcCompat="@drawable/ic_avatar"
             />
 
         <TextView
