--- a/app/src/main/res/layout/my_feeds_item_layout.xml
+++ b/app/src/main/res/layout/my_feeds_item_layout.xml
@@ -21,7 +21,9 @@
             android:layout_marginStart="16dp"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="8dp"
-            app:srcCompat="@drawable/ic_doctor"
+            app:civ_border_width="2dp"
+            app:civ_border_color="@color/colorBlack"
+            app:srcCompat="@drawable/ic_avatar"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
