only Follower remaining

--- a/app/src/main/res/layout/activity_edit_follwer.xml
+++ b/app/src/main/res/layout/activity_edit_follwer.xml
@@ -11,7 +11,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginTop="20dp"
-        android:src="@drawable/photo2"
+        android:src="@drawable/ic_avatar"
         android:layout_gravity="center_horizontal"/>
 
 
