--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
             >
 
             <com.mikhaellopez.circularimageview.CircularImageView
-                android:id="@+id/loginUser"
+                android:id="@+id/currentUserProfile"
                 android:layout_gravity="right|center_vertical"
                 android:layout_width="40dp"
                 android:layout_height="match_parent"
@@ -33,7 +33,6 @@
                 app:civ_border_color="@color/colorWhite"
                 app:srcCompat="@drawable/ic_avatar"/>
         </androidx.appcompat.widget.Toolbar>
-
 
         <FrameLayout
             android:id="@+id/fragment_container"
