--- a/app/src/main/res/layout/item_fram_layout.xml
+++ b/app/src/main/res/layout/item_fram_layout.xml
@@ -11,21 +11,22 @@
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:scaleType="centerCrop"
-        android:src="@drawable/rectangle2"
+        android:src="@drawable/ic_avatar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/txt_frame_title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:text="Fram Title"
-        android:textColor="#FFFFFF"
-        android:textSize="18sp"
-        android:textStyle="bold"
+    <ProgressBar
+        android:id="@+id/progressBarProfile"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:indeterminateDrawable="@drawable/progressbar"
+        android:visibility="gone"
+        android:layout_margin="8dp"
         app:layout_constraintBottom_toBottomOf="@+id/frame_image"
         app:layout_constraintEnd_toEndOf="@+id/frame_image"
-        app:layout_constraintStart_toStartOf="@+id/frame_image" />
+        app:layout_constraintStart_toStartOf="@+id/frame_image"
+        app:layout_constraintTop_toTopOf="@+id/frame_image" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
