--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -1,39 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:background="#000000"
-    android:padding="16dp"
     android:theme="@style/ThemeOverlay.AppCompat.Dark"
     android:layout_height="176dp">
-    <ImageView
-        android:layout_marginTop="40dp"
-        android:id="@+id/img_userProfile"
-        android:layout_width="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:contentDescription="@null"
-        android:src="@drawable/face_id"/>
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="20dp">
+        <com.mikhaellopez.circularimageview.CircularImageView
+            android:id="@+id/img_userProfile"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:civ_border_width="2dp"
+            android:layout_centerHorizontal="true"
+            android:contentDescription="@null"
+            app:srcCompat="@drawable/ic_avatar"/>
 
-    <TextView
-        android:id="@+id/txt_userName"
-        android:layout_marginTop="12dp"
-        android:layout_below="@+id/img_userProfile"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="18sp"
-        android:textColor="#fff"
-        android:layout_centerHorizontal="true"
-        android:text="Gavin Craig"/>
-    
-    <TextView
-        android:id="@+id/txt_userTitle"
-        android:layout_below="@+id/txt_userName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="14sp"
-        android:layout_centerHorizontal="true"
-        android:text="Gavin Craig"/>
+        <TextView
+            android:id="@+id/txt_userName"
+            android:layout_marginTop="12dp"
+            android:layout_below="@+id/img_userProfile"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:textColor="#fff"
+            android:maxLength="@integer/bt_match_parent"
+            android:layout_centerHorizontal="true"
+            android:text="Gavin Craig"/>
 
+    </RelativeLayout>
 </RelativeLayout>
