--- a/app/src/main/res/layout/activity_add_service.xml
+++ b/app/src/main/res/layout/activity_add_service.xml
@@ -31,8 +31,22 @@
             android:layout_marginTop="8dp"
             android:background="@color/colorWhite"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView8" />
+
+        <ProgressBar
+            android:id="@+id/progressBarProfile"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:padding="30dp"
+            android:layout_gravity="center"
+            android:indeterminateDrawable="@drawable/progressbar"
+            android:visibility="visible"
+            app:layout_constraintBottom_toBottomOf="@+id/feature_img"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@+id/feature_img" />
 
         <ImageView
             android:layout_width="50dp"
