--- a/app/src/main/res/layout/activity_profile_setting.xml
+++ b/app/src/main/res/layout/activity_profile_setting.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="16dp"
+    android:padding="16dp"
     android:background="@color/colorBlack">
 
         <RelativeLayout
