--- a/app/src/main/res/layout/item_service.xml
+++ b/app/src/main/res/layout/item_service.xml
@@ -57,12 +57,12 @@
             <TextView
                 android:id="@+id/txt_servic_description"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="40dp"
                 android:layout_below="@+id/txt_servic_name"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/montserrat"
-                android:maxLines="5"
-                android:text="A product description is the marketing copy that explains what a product is and why it’s worth purchasing."
+                android:maxLines="2"
+                android:text="A product description is the marketing copy that explains."
                 android:textColor="@color/Graycolor"
                 android:textSize="14sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -75,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="20dp"
                 android:layout_below="@+id/txt_servic_description"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="4dp"
                 android:numStars="5"
                 android:rating="4"
                 android:theme="@style/RatingBar"
@@ -87,7 +87,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/ratbar"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="2dp"
                 android:fontFamily="@font/montserrat"
                 android:text="Rate"
                 android:textColor="@color/Graycolor"
@@ -118,7 +118,7 @@
                 android:id="@+id/priceType"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="2dp"
                 android:fontFamily="@font/montserrat"
                 android:text="PriceType"
                 android:textColor="@color/colorBlue"
